@@ -5,6 +5,8 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -186,8 +188,8 @@ public class ElementService implements ServiceInterface<Element> {
 
 	@Override
 	public boolean isValid(Element obj) {
-		return showAllElements().stream()
-				.filter(element -> element.equals(obj)).toList().size() > 0 ? true : false;
+		List<Element> elementStream = showAllElements().stream()
+				.filter(element -> element.equals(obj)).collect(Collectors.toList());
+		return elementStream.size() > 0;
 	}
-
 }
